--- a/<YALCIN>_adult_census_income.ipynb
+++ b/<YALCIN>_adult_census_income.ipynb
@@ -29,7 +29,7 @@
       "metadata": {
         "id": "eRoOBdry_msi",
         "colab_type": "code",
-        "outputId": "b64cf8e8-9990-4810-d4dd-84daddbd7d0e",
+        "outputId": "09c33b08-e4bf-437e-87aa-d35fdbef7c6e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 292
@@ -37,6 +37,10 @@
       },
       "cell_type": "code",
       "source": [
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "\n",
+        "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "url = 'https://raw.githubusercontent.com/semreyalcin/CNG562-HW1/master/adult.csv'\n",
@@ -217,7 +221,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1887
         },
-        "outputId": "a1f6b001-40b3-45f8-dbb2-a513a729d717"
+        "outputId": "e518f887-d16b-48cb-8d93-b8a2fcafa075"
       },
       "cell_type": "code",
       "source": [
@@ -352,7 +356,7 @@
       "metadata": {
         "id": "jx6dCjLmAb1L",
         "colab_type": "code",
-        "outputId": "b1ff7716-77eb-4986-f43e-6d0be8250bef",
+        "outputId": "6169b955-b295-4a6a-90ed-31c6c4baef6c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 287
@@ -620,7 +624,7 @@
           "height": 287
         },
         "cellView": "code",
-        "outputId": "4156b510-7b77-41b9-d66b-e49b98260a98"
+        "outputId": "46ae3397-46b9-44de-b54b-8693d3fc1ab4"
       },
       "cell_type": "code",
       "source": [
@@ -867,9 +871,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 321
+          "height": 287
         },
-        "outputId": "8a0b4dc8-6023-4850-af24-4e90744f2d2c"
+        "outputId": "bda0fa85-f6d0-4e41-a4f1-1516414e4d0c"
       },
       "cell_type": "code",
       "source": [
@@ -879,14 +883,6 @@
       ],
       "execution_count": 6,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:2: DataConversionWarning: Data with input dtype int64 were all converted to float64.\n",
-            "  \n"
-          ],
-          "name": "stderr"
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -1126,7 +1122,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 287
         },
-        "outputId": "88d8f89b-ac35-4c07-a8a3-2c88a70ba83f"
+        "outputId": "e5a99088-588c-4e36-9cc8-eb632b38b25a"
       },
       "cell_type": "code",
       "source": [
@@ -1382,7 +1378,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 119
         },
-        "outputId": "4a4eaf42-40be-4748-a126-f5d8e209f172"
+        "outputId": "48702b25-60f3-44d5-d05c-1b935aceaf33"
       },
       "cell_type": "code",
       "source": [
@@ -1431,9 +1427,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 88
+          "height": 34
         },
-        "outputId": "8aeccbf4-67d2-4307-dd9b-ef5d91c24b99"
+        "outputId": "f7949640-739f-45a2-ece4-a2b383fd511b"
       },
       "cell_type": "code",
       "source": [
@@ -1443,14 +1439,6 @@
       ],
       "execution_count": 10,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n"
-          ],
-          "name": "stderr"
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -1471,9 +1459,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1601
+          "height": 85
         },
-        "outputId": "7687e82b-acad-4b42-c97a-55c10d733f45"
+        "outputId": "35f5a988-9671-4a02-da05-c28938164feb"
       },
       "cell_type": "code",
       "source": [
@@ -1486,107 +1474,13 @@
         "logRegression = grid.best_estimator_\n",
         "accuracy_score(y_test,logRegression.predict(X_test))"
       ],
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/model_selection/_split.py:2053: FutureWarning: You should specify a value for 'cv' instead of relying on the default value. The default value will change from 3 to 5 in version 0.22.\n",
-            "  warnings.warn(CV_WARNING, FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "CPU times: user 57.8 s, sys: 3.95 s, total: 1min 1s\n",
-            "Wall time: 56.7 s\n",
+            "CPU times: user 53.5 s, sys: 4.02 s, total: 57.6 s\n",
+            "Wall time: 52.3 s\n",
             "{'C': 100.0, 'penalty': 'l2'}\n"
           ],
           "name": "stdout"
@@ -1601,7 +1495,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 11
         }
       ]
     },
@@ -1611,9 +1505,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 156
+          "height": 34
         },
-        "outputId": "8049e07b-7f86-44a1-c1b1-4c7cb30b0098"
+        "outputId": "af2316d3-6b6d-4ce9-d791-bb9e394f3ad2"
       },
       "cell_type": "code",
       "source": [
@@ -1624,20 +1518,8 @@
         "\n",
         "cv_results['test_score']    \n"
       ],
-      "execution_count": 15,
+      "execution_count": 12,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n",
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-            "  FutureWarning)\n"
-          ],
-          "name": "stderr"
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -1648,7 +1530,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 12
         }
       ]
     },
@@ -1660,7 +1542,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "ea28543c-70e6-4818-8433-1046c9c84391"
+        "outputId": "a4cb770b-886b-4c3f-e061-9f092aa988d6"
       },
       "cell_type": "code",
       "source": [
@@ -1668,19 +1550,19 @@
         "tree = DecisionTreeClassifier().fit(X_train, y_train)\n",
         "accuracy_score(y_test,tree.predict(X_test))"
       ],
-      "execution_count": 16,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.8063981435438422"
+              "0.8057351234874855"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 13
         }
       ]
     },
@@ -1702,7 +1584,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "2d83678b-bf2a-4813-eb2a-c297a1996c3b"
+        "outputId": "06fc442d-fc41-4247-e137-4e30dfa40aea"
       },
       "cell_type": "code",
       "source": [
@@ -1711,7 +1593,7 @@
         "KNN = KNeighborsClassifier(n_neighbors=5).fit(X_train,y_train)\n",
         "accuracy_score(y_test,KNN.predict(X_test))"
       ],
-      "execution_count": 17,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1723,7 +1605,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 14
         }
       ]
     },
